@@ -85,7 +85,7 @@ show, there would be a projector handy.</p>
 <li>Click the &quot;Ø&quot; button to switch between presentation &amp;
 handout/outline modes.</li>
 </ul>
-<div class="handout container">
+<div class="handout docutils container">
 In presentation mode, mouse over to the lower right-hand corner to
 display the controls.</div>
 
